[360367] Bundle/Console editor parts integrated with Libra Launchers
The three editor parts - Bundle Information, Bundle Dependency Graph and
Server Console - are now integrated with Libra Launchers. The three
editor parts appear in the server editor of the respective server
adapters. 

This integration uses the basic integration implementation provided by
the org.eclipse.libra.framework.editor.integration plugin.

--- a/plugins/org.eclipse.libra.framework.core/src/org/eclipse/libra/framework/core/Messages.properties
+++ b/plugins/org.eclipse.libra.framework.core/src/org/eclipse/libra/framework/core/Messages.properties
@@ -1,5 +1,5 @@
 ###############################################################################
-#    Copyright (c) 2010 Eteration A.S. and others.
+#    Copyright (c) 2010, 2011 Eteration A.S. and others.
 #    All rights reserved. This program and the accompanying materials
 #    are made available under the terms of the Eclipse Public License v1.0
 #    which accompanies this distribution, and is available at
@@ -11,7 +11,8 @@
 #           org.eclipse.jst.server.core
 #           org.eclipse.jst.server.ui
 #           
-#       Naci Dai and Murat Yener, Eteration A.S. 
+#        Naci Dai and Murat Yener, Eteration A.S. 
+#        Kaloyan Raev, SAP AG - integration with OSGi Framework Editor parts
 ###############################################################################
 
 # --------------- General UI ---------------
@@ -20,3 +21,9 @@ loadingTask=Loading...
 errorCouldNotLoadConfiguration=Could not load configuration
 errorOSGiBundlesOnly=Only osgi bundles are allowed
 configurationEditorActionAddOsgiModule=Add OSGI Bundles
+
+OSGIFrameworkInstanceBehaviorDelegate_CannotGetCmdLineArguments=Cannot get command line arguments of the server process.
+OSGIFrameworkInstanceBehaviorDelegate_CannotGetInOutStreams=Cannot get standard input and output streams of the server process.
+OSGIFrameworkInstanceBehaviorDelegate_RemoteJmxNotConfigured=Server process is not configured for remote JMX access.
+OSGIFrameworkInstanceBehaviorDelegate_ServerNotInitialized=Server not initialized.
+OSGIFrameworkInstanceBehaviorDelegate_ServerNotStarted=Server not started.
