Quick fix for dirty logic
Change-Id: I2e71f470a53ef2d21737355238b9cf70a0265506

--- a/plugins/org.eclipse.libra.framework.ui/src/org/eclipse/libra/framework/ui/Messages.properties
+++ b/plugins/org.eclipse.libra.framework.ui/src/org/eclipse/libra/framework/ui/Messages.properties
@@ -57,7 +57,7 @@ configurationEditorAddOSGIModule=Add OSGi Bundle...
 
 
 # --- framework Editor ---
-serverEditorLocationsSection=Felix framework instance locations
+serverEditorLocationsSection=OSGi framework instance locations
 serverEditorLocationsDescription=Specify the location path. Bundles are deployed here and framework instance will run from this location.  No modules must be published here to make changes.
 serverEditorLocationsDescription2=Specify the location path. Bundles are deployed here and framework instance will run from this location.  No modules must be published here to make changes.
 serverEditorGeneralSection=Framework Options
@@ -75,7 +75,7 @@ serverEditorSetDefaultDeployDirLink2=Set deploy path to the default value (curre
 # Note: The argument for the following three strings will be the string for
 #       one of serverEditorDoesNotModify or serverEditorTakesControl or and empty string.
 serverEditorServerDirMetadata=Use workspace metadata {0}
-serverEditorServerDirInstall=Use Felix installation {0}
+serverEditorServerDirInstall=Use OSGi Framework installation {0}
 serverEditorServerDirCustom=Use custom location {0}
 serverEditorServerDir=Framework instance path:
 serverEditorDeployDir=Deploy path:
