JMX Port Settings Editor Components
Change-Id: I0b9bf677b8d95cb32d8d388129fd5f1d0479effe

--- a/plugins/org.eclipse.libra.framework.ui/src/org/eclipse/libra/framework/ui/Messages.properties
+++ b/plugins/org.eclipse.libra.framework.ui/src/org/eclipse/libra/framework/ui/Messages.properties
@@ -130,3 +130,8 @@ errorCleanCantRestart={0} is unable to restart at this time.
 
 javaProfileSection= Runtime Java Profile
 javaProfileSectionDescription = Choose the suitable profile that fits your runtime environment. The selected profile will determine the list of classes and packages that are visible from the JRE.
+
+jmxSection = JMX Port
+jmxSectionDescription = Choose the suitable properties that enables the JMX Console for your runtime. Your JMX server will expect connections using selected port
+jmxInvalidPort = JMX Port should be an integer value
+jmxEnabled = Enable JMX Console
