[344289]  Fix FindBug warnings in WAR Products
Work in progress

Signed-off-by: Hannes Erven <hannes@erven.at>

--- a/plugins/org.eclipse.libra.warproducts.ui/src/org/eclipse/libra/warproducts/ui/messages.properties
+++ b/plugins/org.eclipse.libra.warproducts.ui/src/org/eclipse/libra/warproducts/ui/messages.properties
@@ -35,3 +35,5 @@ SelectionPageTitle=WAR product selection
 NewWARProductError=Error while initializing WAR Product
 LoadWARProductError=Error while loading WAR Product
 OutlinePluginsTitle=Plug-Ins
+NewWARDeleteFailed_title=WAR File Export could not complete
+NewWARDeleteFailed_desc=Existing file at export destination could not be deleted.
