[344289]  Fix FindBug warnings in WAR Products
Work in progress


Signed-off-by: Hannes Erven <hannes@erven.at>

--- a/plugins/org.eclipse.libra.framework.equinox/src/org/eclipse/libra/framework/equinox/Messages.properties
+++ b/plugins/org.eclipse.libra.framework.equinox/src/org/eclipse/libra/framework/equinox/Messages.properties
@@ -18,3 +18,4 @@ warningCantReadBundle=Cannot locate the correct bundle folder.  Invalid Installa
 errorNotBundle=Must be an osgi bundle
 errorOSGiBundlesOnly=Must be an osgi bundle
 errorNoRuntime=There is no runtime
+errorIOerror=IO Error accessing/creating file: 
